# airpods

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  agents.md  aipod.py  airpod.py  podman.py  pyproject.toml
.github/workflows/: test.yml
aipod/: __init__.py  config.py  logging.py  state.py
airpod/: __init__.py  cli.py  config.py  podman.py  portal.py  state.py  system.py  tunnel.py
airpods/: cli.py  config.py  cuda.py  logging.py  ollama.py  plugins.py  podman.py  runtime.py  services.py  state.py  system.py  ui.py
airpods/cli/: __init__.py  command_classes.py  common.py  completions.py  help.py  status_view.py
airpods/cli/commands/: __init__.py  clean.py  config.py  doctor.py  init.py  models.py  start.py  stop.py
airpods/configuration/: defaults.py  loader.py  resolver.py  schema.py
config/: Caddyfile.portal.template  Caddyfile.template  cloudflared.yml.template
docs/: cuda-detection.md  goals.md
docs/commands/: config.md  models.md  start.md
docs/configuration/: concurrent-pulls.md  network.md
docs/plans/: models-edit.md  service-comfyui.md  service-gateway.md  service-llama.md  service-open-webui.md
plugins/open-webui/: README.md  code_detector.py  markdown_enhancer_function.py  profanity_filter.py  token_counter.py  twitter_scraper.py  vision_joycaption.py  web_researcher.py
plugins/open-webui/functions/filters/: code_detector_filter.py  system_prompt_enforcer_filter.py
plugins/open-webui/pipelines/: content_moderation_pipeline.py
plugins/open-webui/tools/: weather_tool.py
portal/: app.py  requirements.txt
portal/static/: style.css
portal/templates/: index.html
tests/: test_cli.py  test_cli_aliases.py  test_cli_backup_restore.py  test_cli_clean.py  test_cli_config.py  test_cli_prompts.py  test_cli_services.py  test_cli_status.py  test_config_volumes.py  test_configuration_loader.py  test_cuda.py  test_gateway_integration.py  test_gateway_port_binding.py  test_plugins.py  test_runtime.py
