[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "airpod"
version = "0.2.0"
description = "Rich, user-friendly CLI for orchestrating local AI services with Podman and UV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.9,<0.13",
  "rich>=13.0,<14.0",
  "click>=8.1,<8.2",
  "psutil>=5.9,<6.0",
  "flask>=3.0,<4.0",
  "bcrypt>=4.0,<5.0",
  "pyyaml>=6.0,<7.0",
]

[project.scripts]
airpod = "airpod:main"

[tool.hatch.metadata]
allow-direct-references = true
